# safeid

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
doc/architecture/: architecture-overview.md  domain-model.md  prd.md  project-charter.md
doc/architecture/decisions/: adr-001-hexagonal-architecture.md  adr-002-image-library.md  adr-003-pdf-rendering-strategy.md  adr-005-export-strategy.md
doc/exports/: PRD_Document_Watermarker_v.01.docx  Project_Charter_Document_Watermaker_v0.1.docx
doc/ux/: ui-spec.md
scripts/: build_macos.sh  run_demo.py  run_ui.py
src/safeid/: __main__.py
src/safeid/adapters/filesystem/: local_filesystem.py
src/safeid/adapters/image/: pillow_decoder.py
src/safeid/adapters/pdf/: reportlab_renderer.py
src/safeid/app/: container.py
src/safeid/core/domain/: errors.py  models.py
src/safeid/core/planners/: layout_planner.py
src/safeid/core/ports/: filesystem.py  image_decoder.py  pdf_renderer.py
src/safeid/core/use_cases/: create_watermarked_pdf.py
src/safeid/ui/assets/icons/: safeid-icon.icns
src/safeid/ui/qt/: app.py  dialogs.py  main_window.py  mappers.py  resources.py
tests/integration/: test_create_watermarked_pdf_end_to_end.py  test_create_watermarked_pdf_errors_and_variants.py
tests/unit/adapters/filesystem/: test_local_filesystem.py
tests/unit/adapters/image/: test_pillow_decoder.py
tests/unit/adapters/pdf/: test_reportlab_renderer.py
tests/unit/core/planners/: test_layout_planner.py
tests/unit/core/use_cases/: test_create_watermarked_pdf.py
